force-app/main/default/objects/FEC_RePayment_Schedule__c/FEC_RePayment_Schedule__c.object-meta.xml
<CustomObject>
    <label>RePayment Schedule</label>
    <nameField>
        <displayFormat>RPSN - {0}</displayFormat>
        <label>RePayment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RePayment Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>