force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_Closing_Principal__c.field-meta.xml
<CustomField>
    <fullName>FEC_Closing_Principal__c</fullName>
    <label>Closing Principal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>