force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_Customer_History__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_History__c</fullName>
    <label>Customer History</label>
    <referenceTo>FEC_Customer_History__c</referenceTo>
    <relationshipLabel>RePayment Schedule</relationshipLabel>
    <relationshipName>RePayment_Schedule</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>