force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_EMI__c.field-meta.xml
<CustomField>
    <fullName>FEC_EMI__c</fullName>
    <label>EMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>