force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Installment_Amount__c</fullName>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>