force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_Installment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Installment_Due_Date__c</fullName>
    <label>Installment Due Date</label>
    <type>Date</type>
</CustomField>