force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_Installment_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_Installment_No__c</fullName>
    <label>Installment No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>