force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_Interest__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interest__c</fullName>
    <label>Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>