force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>