force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>