force-app/main/default/objects/FEC_RePayment_Schedule__c/fields/FEC_Repayment_Fee__c.field-meta.xml
<CustomField>
    <fullName>FEC_Repayment_Fee__c</fullName>
    <label>Repayment Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>